--- a/package.json
+++ b/package.json
@@ -1,12 +1,21 @@
 {
   "name": "mlstring",
-  "version": "1.0.2",
+  "version": "2.0.1",
   "description": "Multi-language string impl",
-  "main": "mlstring.ts",
-  "scripts": {
-    "test": "jest"
-  },
-  "repository": {
+  "main": "lib/mlstring.ts",
+  "types": "lib/mlstring.d.ts",
+"scripts": {
+   "test": "jest",
+   "build": "tsc",
+   "format": "prettier --write \"src/**/*.ts\" \"src/**/*.js\"",
+   "lint": "tslint -p tsconfig.json",
+   "prepare": "npm run build",
+   "prepublishOnly": "npm test && npm run lint",
+   "preversion": "npm run lint",
+   "version": "npm run format && git add -A src",
+   "postversion": "git push && git push --tags"
+},
+"repository": {
     "type": "git",
     "url": "git+https://github.com/kmvpvl/mlstring.git"
   },
@@ -31,7 +40,13 @@
     "jest": "^29.2.2",
     "jest-cli": "^29.2.2",
     "jest-environment-jsdom": "^29.2.2",
+    "prettier": "^2.8.0",
     "ts-jest": "^29.0.3",
+    "tslint": "^6.1.3",
+    "tslint-config-prettier": "^1.18.0",
     "typescript": "^4.8.4"
-  }
+  },
+  "files": [
+    "lib/**/*"
+  ]
 }
